--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
 #map {
-    height: 800px;
+    height: 600px;
+
 }
+.row {
+    display: flexbox;
+    flex-direction: row;
+}
+.col {
+    display: flexbox;
+    flex-direction: column ;
+}
+
+.node circle {
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 3px;
+}
+
+.node text { font: 12px sans-serif; }
+
+.link {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 2px;
+  }
